--- a/css/style.css
+++ b/css/style.css
@@ -1,46 +1,49 @@
-@import url('https://fonts.googleapis.com/css2?family=Solitreo&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Solitreo&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Solitreo&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Solitreo&display=swap");
 
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
+:root {
+	--main-color:#fa5b0f:
+}
 body {
-    /* background-color: #151515; */
+  /* background-color: #151515; */
 }
 
 ::selection {
-    background-color: var(--main-color);
-    color: #fff;
+  background-color: var(--main-color);
+  color: #fff;
 }
 
 .container {
-    margin-left: auto;
-    margin-right: auto;
-    padding: 0px 15px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0px 15px;
 }
 
 /*samall*/
 
 @media (min-width: 768px) {
-    .container {
-        width: 750px;
-    }
+  .container {
+    width: 750px;
+  }
 }
 
 /*medium*/
 
 @media (min-width: 992px) {
-    .container {
-        width: 960px;
-    }
+  .container {
+    width: 960px;
+  }
 }
 
 /*larg*/
 @media (min-width: 1200px) {
-    .container {
-        width: 1120px;
-    }
+  .container {
+    width: 1120px;
+  }
 }
 
 /*end of global rules*/
@@ -48,101 +51,98 @@ body {
 /* start aside section */
 
 aside {
-    width: 300px;
-    height: 95.9vh;
-    background-color: #222222;
-    padding: 25px 15px 15px 15px;
-    display: flex;
-    /*justify-content: center;
-    */flex-direction: column;
-    transition: 0.5s;
-    -webkit-transition: 0.5s;
-    -moz-transition: 0.5s;
-    -ms-transition: 0.5s;
-    -o-transition: 0.5s;
+  width: 300px;
+  height: 95.9vh;
+  background-color: #222222;
+  padding: 25px 15px 15px 15px;
+  display: flex;
+  /*justify-content: center;
+    */
+  flex-direction: column;
+  transition: 0.5s;
+  -webkit-transition: 0.5s;
+  -moz-transition: 0.5s;
+  -ms-transition: 0.5s;
+  -o-transition: 0.5s;
+	position: relative;
+	z-index: 99999999;
 }
 
 aside .logo img {
-    max-width: 100%;
-    width: 170px;
-    height: 170px;
-    border-radius: 50%;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -ms-border-radius: 50%;
-    -o-border-radius: 50%;
-    border: 7px solid #fa5b0f;
+  max-width: 100%;
+  width: 170px;
+  height: 170px;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  border: 7px solid #fa5b0f;
 }
 
 aside .logo {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.13);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.13);
 }
 
 aside .logo p {
-    color: #fff;
-    font-size: 30px;
-    font-family: 'Solitreo', cursive;
-    font-weight: bold;
-
+  color: #fff;
+  font-size: 30px;
+  font-family: "Solitreo", cursive;
+  font-weight: bold;
 }
 
 aside .links-of-page {
-    text-align: center;
+  text-align: center;
 }
 
 aside .links-of-page ul li a {
-    text-decoration: none;
-    color: #fff;
-    transition: 0.5s;
-    -webkit-transition: 0.5s;
-    -moz-transition: 0.5s;
-    -ms-transition: 0.5s;
-    -o-transition: 0.5s;
+  text-decoration: none;
+  color: #fff;
+  transition: 0.5s;
+  -webkit-transition: 0.5s;
+  -moz-transition: 0.5s;
+  -ms-transition: 0.5s;
+  -o-transition: 0.5s;
 }
 
 aside .links-of-page ul {
-    list-style: none;
-    padding: 0;
-    font-family: 'Solitreo', cursive;
-    margin-top: 130px;
-
+  list-style: none;
+  padding: 0;
+  font-family: "Solitreo", cursive;
+  margin-top: 130px;
 }
 
 aside .links-of-page ul li {
-    padding-bottom: 10px;
-    margin-bottom: 15px;
-    font-size: 25px;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.13);
-    transition: 0.5s;
-    -webkit-transition: 0.5s;
-    -moz-transition: 0.5s;
-    -ms-transition: 0.5s;
-    -o-transition: 0.5s;
+  padding-bottom: 10px;
+  margin-bottom: 15px;
+  font-size: 25px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.13);
+  transition: 0.5s;
+  -webkit-transition: 0.5s;
+  -moz-transition: 0.5s;
+  -ms-transition: 0.5s;
+  -o-transition: 0.5s;
 }
 
-
 aside .links-of-page ul li i {
-    color: #fff;
-    padding-right: 6px;
-    font-size: 20px;
+  color: #fff;
+  padding-right: 6px;
+  font-size: 20px;
 }
 
 aside .links-of-page ul li:hover {
-    padding-left: 10px;
-
+  padding-left: 10px;
 }
-
 
 aside .links-of-page ul li a:hover,
 aside .links-of-page ul li a:hover i {
-    color: #fa5b0f;
+  color: #fa5b0f;
 }
 
-
-.landing { 
+.landing {
   display: grid;
   grid-template-columns: 1fr 1fr;
   background-image: url(../images/bb.jpg);
@@ -151,43 +151,96 @@ aside .links-of-page ul li a:hover i {
   background-size: cover;
 }
 
-
-
+.right .icon i {
+  font-size: 25px;
+  color: #fff;
+  display: none;
+}
+@media (max-width: 800px) {
   .right .icon i {
-    font-size: 25px;
-    color: #fff;
-    display: none;
+    display: block;
   }
- @media (max-width: 800px) {
 
-    .right .icon i {
-        display: block;
-    }
-
-    aside.active {
-        /*transform: rotateY(-90deg);
+  aside.active {
+    /*transform: rotateY(-90deg);
         -webkit-transform: t;
         -moz-transform: t;
         -ms-transform: t;
         -o-transform: t;
         transform-origin: left center;
-        */transform: translateX(-400px);
-    }
+        */
+    transform: translateX(-400px);
+  }
 
-    aside {
-        width: 185%;
-    }
+  aside {
+    width: 185%;
+  }
 
-    .right .icon{
-    
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        position: absolute;
-        right: 12px;
-        top: 20px;
-    
-      }
- }
+  .right .icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    right: 12px;
+    top: 20px;
+		z-index: 99999999999;
+  }
+}
 
-  
+.right {
+	position: relative;
+}
+
+#type-text {
+  font-size: 60px;
+  font-family: "Solitreo", cursive;
+  color: #fff;
+	position: absolute;
+	left: -567px;
+	top: 42%;
+	font-weight: bold;
+	padding: 20px;
+	padding-right: 170px;
+	line-height: 1.8;
+	
+}
+
+@media(max-width: 800px) {
+
+
+
+	#type-text {
+		font-size: 45px;
+		left: -141px;
+		top: 22%;
+		padding-right: 10px;
+	}
+
+}
+
+
+#type-text2 {
+  font-size: 20px;
+  font-family: "Solitreo", cursive;
+  color: #fa5b0f;
+	/* position: absolute;
+	left: -567px;
+	top: 66%; */
+	font-weight: bold;
+	/* padding: 20px; */
+	padding: 42px;
+	
+}
+
+@media(max-width: 800px) {
+
+
+
+	#type-text2 {
+		font-size: 20px;
+		/* left: -141px;
+		top: 60%; */
+		/* padding-right: 5px; */
+	}
+
+}
