change the width

--- a/css/style.css
+++ b/css/style.css
@@ -237,6 +237,7 @@ aside .links-of-page ul li a:hover i {
     padding-right: 10px;
     text-align: center;
     padding: 20px;
+    padding-top: 110px;
   }
 }
 
