--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ html {
 }
 body {
   /* background-color: #151515; */
-  height: 200vh;
+  height: 2000vh;
   font-family: "Solitreo", cursive;
   flex-wrap: wrap;
 }
@@ -292,7 +292,7 @@ aside .links-of-page ul li a:hover i {
   color: var(--main-color);
 }
 
-.about .container .ident .color {
+ .container .color {
   width: 250px;
   height: 5px;
   background-image: linear-gradient(to right, var(--main-color) 50%, #000 50%);
@@ -300,7 +300,7 @@ aside .links-of-page ul li a:hover i {
   position: relative;
 }
 
-.about .container .ident .color .move {
+.about .container .color .move {
   position: absolute;
   left: 0;
   top: 0;
@@ -322,6 +322,9 @@ aside .links-of-page ul li a:hover i {
     -ms-transform: translateX(250px);
     -o-transform: translateX(250px);
   }
+}
+.about {
+  padding-top: 30px;
 }
 .about .container {
   margin-right: 155px;
@@ -355,7 +358,6 @@ aside .links-of-page ul li a:hover i {
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
-  border: 1px solid rgba(153, 153, 153, 0.192);
 }
 
 .about .container .skills .text {
@@ -368,7 +370,13 @@ aside .links-of-page ul li a:hover i {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  /* flex-wrap: wrap; */
+  background-color: #f5f5f5;
+  padding: 20px;
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
 }
 
 .about .container .information .personal {
@@ -433,6 +441,7 @@ aside .links-of-page ul li a:hover i {
   -moz-border-radius: 25px;
   -ms-border-radius: 25px;
   -o-border-radius: 25px;
+  margin-top: 25px;
 }
 
 .about .container a#cv::before {
@@ -463,3 +472,80 @@ aside .links-of-page ul li a:hover i {
 .about .container a#cv:hover {
   color: #000;
 }
+
+.about .container .education {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(400px,1fr));
+  gap: 40px;
+  background-color: #f5f5f5;
+  padding: 30px;
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+  position: relative;
+  margin-top: 50px;
+}
+
+.about .container h3 {
+  font-size: 35px;
+  margin-bottom: 2px;
+}
+.about .container .education .amit {
+  border-bottom: 1px solid #00000021;
+
+}
+.about .container .education .met {
+  border-bottom: 1px solid #00000021;
+  /* padding-left: 20px; */
+}
+.about .container .education .line {
+  position: absolute;
+  width: 1px;
+  height: 80%;
+  background-color: #00000021;
+  left: 50%;
+  top:10%;
+}
+.about .container .education b {
+  color: var(--main-color);
+  font-size: 25px;
+  border-bottom: 1px solid #00000021;
+}
+
+
+.about .container .education b span {
+  color: #000;
+}
+.about .container .education p {
+  line-height: 1.8;
+  color: var(--p-color);
+}
+.about .container .education p::first-letter {
+  font-size: 30px;
+  color: var(--main-color);
+  padding-right: 5px;
+  font-weight: bold;
+}
+
+@media(max-width: 900px) {
+  .about .container .education  {
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  }
+
+  .about .container .education .line {
+    display: none;
+  }
+  
+.about .container .education .smart {
+  border-bottom: 1px solid #00000021;
+}
+
+
+}
+
+
+
+
+
