--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ html {
 }
 body {
   /* background-color: #151515; */
-  height: 2000vh;
+  /* height: 2000vh; */
   font-family: "Solitreo", cursive;
   flex-wrap: wrap;
 }
@@ -283,7 +283,7 @@ aside .links-of-page ul li a:hover i {
 .about {
   margin-top: 50px;
 }
-.about .container h1 {
+ .container h1 {
   font-family: "Solitreo", cursive;
   font-size: 50px;
   margin-bottom: 5px;
@@ -300,7 +300,7 @@ aside .links-of-page ul li a:hover i {
   position: relative;
 }
 
-.about .container .color .move {
+ .container .color .move {
   position: absolute;
   left: 0;
   top: 0;
@@ -486,6 +486,7 @@ aside .links-of-page ul li a:hover i {
   -o-border-radius: 20px;
   position: relative;
   margin-top: 50px;
+  margin-bottom: 100px;
 }
 
 .about .container h3 {
@@ -541,11 +542,103 @@ aside .links-of-page ul li a:hover i {
 .about .container .education .smart {
   border-bottom: 1px solid #00000021;
 }
-
+body {
+  user-select: none;
+}
 
 }
 
+.comp .container {
+  margin-right: 155px;
+}
+.comp .container .images .poster {
+  position: relative;
+}
+.comp .container .images .poster img {
+  max-width: 100%;
+  border-radius: 25px;
+  -webkit-border-radius: 25px;
+  -moz-border-radius: 25px;
+  -ms-border-radius: 25px;
+  -o-border-radius: 25px;
+  display: inline-block;
+  position: relative;
+}
+.comp .container .images .poster .for-img {
+  position: relative;
+  cursor: pointer;
 
+}
 
+.comp .container .images .poster .for-img .before {
+  width: 100%;
+  height: 97%;
+  background-color: #ffb30081;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 56456456864864;
+  border-radius: 25px;
+  -webkit-border-radius: 25px;
+  -moz-border-radius: 25px;
+  -ms-border-radius: 25px;
+  -o-border-radius: 25px;
+  transform: scale(0);
+  -webkit-transform: scale(0);
+  -moz-transform: scale(0);
+  -ms-transform: scale(0);
+  -o-transform: scale(0);
+  transition: 0.5s;
+  -webkit-transition: 0.5s;
+  -moz-transition: 0.5s;
+  -ms-transition: 0.5s;
+  -o-transition: 0.5s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
+.comp .container .images .poster .for-img .before a {
+  color: #fff;
+  font-weight: bold;
+font-size: 30px;
+}
+.comp .container .images .poster .for-img:hover .before {
+  transform: scale(1);
+  -webkit-transform: scale(1);
+  -moz-transform: scale(1);
+  -ms-transform: scale(1);
+  -o-transform: scale(1);
+}
 
+.comp .container .images .poster .for-img:hover::before {
+  transform: scale(1);
+  -webkit-transform: scale(1);
+  -moz-transform: scale(1);
+  -ms-transform: scale(1);
+  -o-transform: scale(1);
+}
+
+.comp .container .images .poster img.nasa,
+.comp .container .images .poster img.ECPC ,
+.comp .container .images .poster img.opet{
+  height: 184px;
+}
+.comp .container .images .poster p  {
+  color: var(--p-color);
+  font-weight: bold;
+text-align: center; 
+}
+.comp .container .images {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px,1fr));
+  gap: 40px;
+  background-color: #f5f5f5;
+  padding: 25px;
+  border-radius: 25px;
+  -webkit-border-radius: 25px;
+  -moz-border-radius: 25px;
+  -ms-border-radius: 25px;
+  -o-border-radius: 25px;
+  margin-top: 50px;
+}
